# the_reference_platform

./: CMakeLists.txt  README.md
1_Desk/: README.md  plug-in.task
2_RIDE/: CMakeLists.txt  README.md
2_RIDE/services/: CMakeLists.txt
2_RIDE/services/msg/: GetSocketPose.op  SocketInfo.ev
2_RIDE/services/src/: socket_service.cpp
2_RIDE/statemachines/: CMakeLists.txt  cleanup.sh
2_RIDE/statemachines/bundles/ride_tutorial/sources/: convert_safety.lf  plug_in.lf  plug_in_app.lf  plug_in_vision.lf  plug_in_wrapper.lf
3_FCI/: CMakeLists.txt  README.md
3_FCI/ride_integration/services/: CMakeLists.txt
3_FCI/ride_integration/services/msg/: PlugIn.op
3_FCI/ride_integration/services/src/: fci_service.cpp
3_FCI/ride_integration/statemachines/: CMakeLists.txt  cleanup.sh
3_FCI/ride_integration/statemachines/bundles/fci_tutorial/sources/: plug_in_fci.lf  plug_in_fci_app.lf
3_FCI/standalone/: CMakeLists.txt
3_FCI/standalone/include/: plug_in_controller.h
3_FCI/standalone/src/: plug_in_controller.cpp  plug_in_controller_standalone.cpp
4_Learning/: CMakeLists.txt  README.md
4_Learning/services/: CMakeLists.txt
4_Learning/services/include/: random_search.h
4_Learning/services/msg/: GetParams.op  Init.op  SetResult.op
4_Learning/services/src/: learning_service.cpp  random_search.cpp
4_Learning/statemachines/: CMakeLists.txt  Makefile  cleanup.sh
4_Learning/statemachines/bundles/fci_learning_tutorial/sources/: plug_in_learning_fci.lf  plug_in_learning_fci_app.lf
4_Learning/statemachines/bundles/ride_learning_tutorial/sources/: plug_in_learning_ride.lf  plug_in_learning_ride_app.lf
cmake/: ClangTools.cmake
